test/semant/negative_controls/buggy_progs/const-assignment.con
concept test
purpose something
state
  const x : Int 
actions
  a()
  x := 1
principle
